--- a/styles.css
+++ b/styles.css
@@ -5,32 +5,20 @@ html, body {
 	font-family: Segoe UI, Calibri, Arial, sans-serif;
 	font-size: 14pt;
 }
-iframe {
-	width: 100%;
-	border: none;
-	height: 88vh;
-	display: none;
-}
-iframe.front {
-	display: block;
-	z-index: 1;
-}
-.nav-container {
-	display: flex;
-}
-.nav {
-	height: 10vh;
-	font-weight: bold;
-	flex: auto;
-}
-.center-content {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+
+.nav-input {
+	height: 25pt;
+	box-sizing: border-box;
+	border: 1px solid black;
+	background-color: #fff;
+	font-size: 14pt;
 }
 .nav-button {
-	font-size: 35pt;
-	display: flex;
+	height: 40pt;
+	box-sizing: border-box;
+	font-weight: bold;
+	flex: auto;
+	font-size: 28pt;
 	background-color: #ddd;
 	color: #000;
 	text-decoration: none;
@@ -38,18 +26,27 @@ iframe.front {
 .nav-button:active {
 	background-color: #bbb;
 }
-.nav-input {
-	border: 1px solid black;
-	background-color: #fff;
-	font-size: 14pt;
-}
 .nav-button.disabled {
 	background-color: #eee;
 	color: #888;
 	cursor: default;
 }
-.column {
-	flex-direction: column;
+
+iframe {
+	box-sizing: border-box;
+	width: 100%;
+	border: none;
+	height: calc(100vh - 65pt);
+	display: none;
+}
+iframe.front {
+	display: block;
+	z-index: 1;
+}
+
+.flex-center {
+	display: flex;
+	justify-content: center;
 }
 #background-message {
 	font-family: Calibri, sans-serif;
