--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,16 @@ html, body {
 	font-size: 14pt;
 }
 
+form {
+	background-color: #404040;
+}
 .nav-input {
 	height: 25pt;
 	box-sizing: border-box;
-	border: 1px solid black;
+	border: none;
 	background-color: #fff;
 	font-size: 14pt;
+	margin-bottom: 5pt;
 }
 .nav-button {
 	height: 40pt;
@@ -19,16 +23,22 @@ html, body {
 	font-weight: bold;
 	flex: auto;
 	font-size: 28pt;
-	background-color: #ddd;
-	color: #000;
+	background-color: #888;
+	color: #fff;
 	text-decoration: none;
 }
+.nav-button {
+	border-right: 5pt solid #404040;
+}
+.nav-button:first-child {
+	border-left: 5pt solid #404040;
+}
 .nav-button:active {
-	background-color: #bbb;
+	background-color: #aaa;
 }
 .nav-button.disabled {
-	background-color: #eee;
-	color: #888;
+	background-color: #fff;
+	color: #404040;
 	cursor: default;
 }
 
@@ -36,7 +46,7 @@ iframe {
 	box-sizing: border-box;
 	width: 100%;
 	border: none;
-	height: calc(100vh - 65pt);
+	height: calc(100vh - 70pt);
 	display: none;
 }
 iframe.front {
