--- a/generator/style.css
+++ b/generator/style.css
@@ -21,6 +21,9 @@ body {
 	font-size: 15pt;
 	background-color: var(--body-bg);
 	line-height: 1.6;
+	font-weight: 300;
+}
+article {
 	font-weight: 400;
 }
 hr {
